NOT TESTED. Changed state to cascadingparameter. added infinity scroll to plates search

--- a/front/Platender.Front/Components/AccountComponents/ChangePassword.razor
+++ b/front/Platender.Front/Components/AccountComponents/ChangePassword.razor
@@ -33,7 +33,7 @@
 </MudPaper>
 
 @code {
-    [Inject]
+    [CascadingParameter]
     private AccountState AccountState { get; set; }
     [Inject]
     private IAuthService AuthService { get; set; }
