--- a/front/Platender.Front/Components/LogoutButton.razor
+++ b/front/Platender.Front/Components/LogoutButton.razor
@@ -5,7 +5,7 @@
 @code {
     [Inject]
     private IAuthService _authService { get; set; }
-    [Inject]
+    [CascadingParameter]
     private AccountState AccountState { get; set; }
     [Inject]
     private ISnackbar SnackbarService { get; set; }
